syntax = "proto3";
package chess;

import "common.proto";
import "session.proto";
import "game.proto";
import "engine.proto";
import "events.proto";
import "persistence.proto";
import "positions.proto";

// ============================================================================
// Core chess service
// ============================================================================

service ChessService {
  // Session management
  rpc CreateSession(CreateSessionRequest) returns (SessionSnapshot);
  rpc GetSession(GetSessionRequest) returns (SessionSnapshot);
  rpc CloseSession(CloseSessionRequest) returns (Empty);

  // Game actions
  rpc MakeMove(MakeMoveRequest) returns (SessionSnapshot);
  rpc GetLegalMoves(GetLegalMovesRequest) returns (LegalMovesResponse);
  rpc UndoMove(UndoMoveRequest) returns (SessionSnapshot);
  rpc RedoMove(RedoMoveRequest) returns (SessionSnapshot);
  rpc ResetGame(ResetGameRequest) returns (SessionSnapshot);

  // Engine control
  rpc SetEngine(SetEngineRequest) returns (Empty);
  rpc StopEngine(StopEngineRequest) returns (Empty);
  // NOTE: No TriggerEngineMove — server auto-triggers

  // Pause/Resume
  rpc PauseSession(PauseSessionRequest) returns (Empty);
  rpc ResumeSession(ResumeSessionRequest) returns (Empty);

  // Session persistence
  rpc SuspendSession(SuspendSessionRequest) returns (SuspendSessionResponse);
  rpc ListSuspendedSessions(ListSuspendedSessionsRequest) returns (ListSuspendedSessionsResponse);
  rpc ResumeSuspendedSession(ResumeSuspendedSessionRequest) returns (SessionSnapshot);
  rpc DeleteSuspendedSession(DeleteSuspendedSessionRequest) returns (Empty);

  // Saved positions
  rpc SavePosition(SavePositionRequest) returns (SavePositionResponse);
  rpc ListPositions(ListPositionsRequest) returns (ListPositionsResponse);
  rpc DeletePosition(DeletePositionRequest) returns (Empty);

  // Event streaming — snapshot-based
  rpc StreamEvents(StreamEventsRequest) returns (stream SessionStreamEvent);
}

message PauseSessionRequest {
  string session_id = 1;
}

message ResumeSessionRequest {
  string session_id = 1;
}
