syntax = "proto3";
package chess;

import "common.proto";

// ============================================================================
// Session Persistence Messages
// ============================================================================

// Server-driven â€” only needs session_id
message SuspendSessionRequest {
  string session_id = 1;
}

message SuspendSessionResponse {
  string suspended_id = 1;
}

message ListSuspendedSessionsRequest {}

message ListSuspendedSessionsResponse {
  repeated SuspendedSessionInfo sessions = 1;
}

message SuspendedSessionInfo {
  string suspended_id = 1;
  string fen = 2;
  optional GameModeProto game_mode = 3;
  uint32 move_count = 4;
  string side_to_move = 5;
  uint64 created_at = 6;
}

message ResumeSuspendedSessionRequest {
  string suspended_id = 1;
}

message DeleteSuspendedSessionRequest {
  string suspended_id = 1;
}

// Save a snapshot directly (from review mode, no active server session).
message SaveSnapshotRequest {
  string fen = 1;
  string name = 2;
  optional GameModeProto game_mode = 3;
  uint32 move_count = 4;
  uint32 skill_level = 5;
}

message SaveSnapshotResponse {
  string suspended_id = 1;
}
